Rectify tests of the model service laer